<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="animvm"
            type="com.example.mssv07092020.viewmodel.AnimActivityVM" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnimActivity">

    <TextView
        android:id="@+id/tv_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_anim_rot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->animvm.onBtnAnimRotateClicked()}"
            android:text="@string/btn_text_anim_rotate" />

        <Button
            android:id="@+id/btn_anim_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->animvm.onBtnAnimScaleClicked()}"
            android:text="@string/btn_text_anim_scale" />

        <Button
            android:id="@+id/btn_anim_transpar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->animvm.onBtnAnimTransparencyClicked()}"
            android:text="@string/btn_text_anim_transpar" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()->animvm.onBtnAnimTranslateClicked()}"
            android:text="@string/btn_text_anim_tarnsfer" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>